// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`布局Row快照测试 gutter = 8 1`] = `
<div
  className="sc-bdvvtL ifYCRH sinoui-row"
/>
`;

exports[`布局Row快照测试 gutterType = "around" 1`] = `
<div
  className="sc-bdvvtL ewZNNT sinoui-row"
/>
`;

exports[`布局Row快照测试 justifyContent = "center" alignItems="center" 1`] = `
<div
  className="sc-bdvvtL eDByAT sinoui-row"
/>
`;

exports[`布局Row快照测试 justifyContent="center" 1`] = `
<div
  className="sc-bdvvtL gRRvbG sinoui-row"
/>
`;

exports[`布局Row快照测试 默认 1`] = `
<div
  className="sc-bdvvtL fGKiXH sinoui-row"
/>
`;
